--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="icon" type="image/png" href="./img/YORIO SIN FONDO BLANCO.png" />
     <link rel="stylesheet" href="css/main.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
-    <header class="divHead">
+    <header class="divHead" data-aos="fade-up"
+    data-aos-duration="3000">
             <img class="logoPNG" src="./img/YORIO SIN FONDO BLANCO.png" alt="Logo Yorio">
             <nav class="listaNav" >
                 <a class="nav" href="/index.html">INICIO</a>
@@ -34,7 +36,8 @@
 
     <main>
         <div class="content">
-            <h1 class="textoHeaderInicio" >Cuidar los rios<br>es cuidar la vida.</h1>
+            <h1 class="textoHeaderInicio" data-aos="fade-up"
+            data-aos-duration="3000" >Cuidar los rios<br>es cuidar la vida.</h1>
         </div>
 
     </main>
@@ -42,6 +45,11 @@
     <footer>
 
     </footer>
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>   
+        AOS.init(); 
+     </script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
 
