creacion de todas las pages

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Conocenos</title>
+    <title>Contacto</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="icon" type="image/png" href="../img/YORIO SIN FONDO BLANCO.png" />
     <link rel="stylesheet" href="../css/main.css" />
@@ -28,9 +28,9 @@
     </header>
 
     <main>
-        <div class="content" id="contentCampanias">
+        <div class="content" id="contentContacto">
             <h1 class="textoHeaderInicio" data-aos="fade-up"
-            data-aos-duration="3000" >Campañas.</h1>
+            data-aos-duration="3000" >Contacto.</h1>
         </div>
 
     </main>
