arregle alineacion del header del ingex

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
-    <header class="divHead" data-aos="fade-up"
+    <header class="divHeader" data-aos="fade-up"
     data-aos-duration="3000">
             <img class="logoPNG" src="./img/YORIO SIN FONDO BLANCO.png" alt="Logo Yorio">
             <nav class="listaNav" >
