--- a/index.html
+++ b/index.html
@@ -11,38 +11,52 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
-    <header class="divHeader" data-aos="fade-up"
+    <header class="header" data-aos="fade-up"
     data-aos-duration="3000">
-            <img class="logoPNG" src="./img/YORIO SIN FONDO BLANCO.png" alt="Logo Yorio">
-            <nav class="listaNav" >
-                <a class="nav" href="/index.html">INICIO</a>
-                <a class="nav" href="/pages/conocenos.html">CONOCENOS</a>
-                <a class="nav" href="/pages/campanias.html">CAMPAÑAS</a>
-                <a class="nav" href="./pages/contacto.html">CONTACTO</a>
+            <img class="header__logo" src="./img/YORIO SIN FONDO BLANCO copia.png" alt="Logo Yorio">
+            <nav class="header__nav" >
+                <ul class="nav__list">
+                    <li class="nav__list-item">
+                        <a class="nav__list-link" href="/index.html">INICIO</a>
+                    </li>
+                    <li class="nav__list-item">
+                        <a class="nav__list-link" href="/pages/conocenos.html">CONOCENOS</a>
+                    </li>
+                    <li class="nav__list-item">
+                        <a class="nav__list-link" href="/pages/campanias.html">CAMPAÑAS</a>
+                    </li>
+                    <li class="nav__list-item">
+                        <a class="nav__list-link" href="/pages/contacto.html">CONTACTO</a>
+                    </li>
+                </ul>
              </nav>
-             <button type="button" id="button" class="btn btn-success">AYUDANOS</button>
-             <!-- que el boton me redireccione a la pagina de mercado pago con los distintos montos a donar -->
-        </div>
-    </header>
 
-    <main>
-        <div class="content" id="contentIndex">
-            <h1 class="textoHeaderInicio" data-aos="fade-up"
-            data-aos-duration="3000" >Cuidar los rios<br>es cuidar la vida.</h1>
-        </div>
+             
+              <button type="button" id="header__button" class="btn btn-success">AYUDANOS</button>
+              <!-- que el boton me redireccione a la pagina de mercado pago con los distintos montos a donar -->
+         </div>
+     </header>
 
+     <main class="mainIndex">
+         <div class="container1">
+             <h1 class="container1__texto" data-aos="fade-up"
+             data-aos-duration="3000" >Cuidar los rios<br>es cuidar la vida.</h1>
+         </div>
+         <div>
+             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos ullam suscipit nam, provident explicabo velit officia asperiores dolorem recusandae quod reprehenderit? Eius impedit nisi quia odit aliquid temporibus distinctio sed? Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae ratione voluptatibus quas et assumenda reprehenderit similique ab voluptatum, aliquam est. Voluptatem quod error quas doloremque ipsum. Totam deserunt eos recusandae!</p>
+             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt animi, at commodi nemo aliquam eos incidunt maxime assumenda ipsum quas tempore doloribus cum veritatis fuga rerum magnam facere, quia esse? Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque temporibus fugit totam nam fuga ut! Sint soluta labore ab explicabo libero minima quo, maiores repellendus id natus, eum facere ut?</p>
+             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos ullam suscipit nam, provident explicabo velit officia asperiores dolorem recusandae quod reprehenderit? Eius impedit nisi quia odit aliquid temporibus distinctio sed? Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae ratione voluptatibus quas et assumenda reprehenderit similique ab voluptatum, aliquam est. Voluptatem quod error quas doloremque ipsum. Totam deserunt eos recusandae!</p>
+             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt animi, at commodi nemo aliquam eos incidunt maxime assumenda ipsum quas tempore doloribus cum veritatis fuga rerum magnam facere, quia esse? Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque temporibus fugit totam nam fuga ut! Sint soluta labore ab explicabo libero minima quo, maiores repellendus id natus, eum facere ut?</p>
+         </div>
     </main>
-
     <footer>
-
+        <p></p>
     </footer>
-
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>   
         AOS.init(); 
      </script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
-
 </body>
 </html>
