arregle texto de cada pagina y link contacto

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <header class="header" data-aos="fade-up"
     data-aos-duration="3000">
             <img class="header__logo" src="./img/YORIO SIN FONDO BLANCO copia.png" alt="Logo Yorio">
+            <!-- div para foto de menu hamburguesa -->
+            <!-- <div id="toggle-menu" class="toggle-menu">
+                <img src="./img/menuHamburguesa.png" alt="">
+            </div> -->
             <nav class="header__nav" >
                 <ul class="nav__list">
                     <li class="nav__list-item">
