cambie la class main en todas las paginas

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
          </div>
      </header>
 
-     <main class="mainIndex">
+     <main class="main">
          <div class="container1">
              <h1 class="container1__texto" data-aos="fade-up"
              data-aos-duration="3000" >Cuidar los rios<br>es cuidar la vida.</h1>
