--- a/pages/campanias.html
+++ b/pages/campanias.html
@@ -37,7 +37,7 @@
          </div>
      </header>
 
-    <main class="mainIndex">
+    <main class="main">
         <div class="container1" id="contentCampanias">
             <h1 class="container1__texto" data-aos="fade-up"
             data-aos-duration="3000" >Campañas.</h1>
