--- a/pages/comoAyudar.html
+++ b/pages/comoAyudar.html
@@ -27,7 +27,7 @@
         </div>
     </header>
 
-    <main>
+    <main class="main">
         <div class="content" id="contentComoAyudar">
             <h1 class="textoHeaderInicio" data-aos="fade-up"
             data-aos-duration="3000" >Cómo ayudarnos.</h1>
