--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
     data-aos-duration="3000">
             <img class="header__logo" src="./img/YORIO SIN FONDO BLANCO copia.png" alt="Logo Yorio">
             <!-- div para foto de menu hamburguesa -->
-            <!-- <div id="toggle-menu" class="toggle-menu">
-                <img src="./img/menuHamburguesa.png" alt="">
+            <!-- <div>
+                <p class="menuText">MENU</p>
             </div> -->
+            <div id="toggle-menu" class="toggle-menu">
+                <img src="./img/menuHamburguesa.png" alt="menuHamburguesa">
+            </div>
             <nav class="header__nav" >
-                <ul class="nav__list">
+                <ul class="nav__list" id="nav__list">
                     <li class="nav__list-item">
                         <a class="nav__list-link" href="/index.html">INICIO</a>
                     </li>
@@ -60,6 +63,8 @@
     <script>   
         AOS.init(); 
      </script>
+         <script src="menu.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
 </body>
