--- a/pages/comoAyudar.html
+++ b/pages/comoAyudar.html
@@ -14,6 +14,9 @@
     <header class="divHeader" data-aos="fade-up"
     data-aos-duration="3000">
             <img class="logoPNG" src="../img/YORIO SIN FONDO BLANCO.png" alt="Logo Yorio">
+            <div id="toggle-menu" class="toggle-menu">
+                <img src="../img/menuHamburguesa.png" alt="menuHamburguesa">
+            </div>
             <nav class="listaNav" >
                 <a class="nav" href="/index.html">INICIO</a>
                 <a class="nav" href="/pages/conocenos.html">CONOCENOS</a>
@@ -28,7 +31,7 @@
     </header>
 
     <main class="main">
-        <div class="content" id="contentComoAyudar">
+        <div class="container1" id="contentComoAyudar">
             <h1 class="textoHeaderInicio" data-aos="fade-up"
             data-aos-duration="3000" >Cómo ayudarnos.</h1>
         </div>
@@ -38,11 +41,13 @@
     <footer>
 
     </footer>
-
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>   
         AOS.init(); 
      </script>
+     
+    <script src="../menu.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
 
