--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -14,6 +14,9 @@
     <header class="header" data-aos="fade-up"
     data-aos-duration="3000">
             <img class="header__logo" src="../img/YORIO SIN FONDO BLANCO copia.png" alt="Logo Yorio">
+            <div id="toggle-menu" class="toggle-menu">
+                <img src="../img/menuHamburguesa.png" alt="menuHamburguesa">
+            </div>
             <nav class="header__nav" >
                 <ul class="nav__list">
                     <li class="nav__list-item">
@@ -53,6 +56,8 @@
     <script>   
         AOS.init(); 
      </script>
+    <script src="../menu.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
 
