arregle linkeado del menu responsive de todas las paginas, faltaba el id nav__list

--- a/pages/campanias.html
+++ b/pages/campanias.html
@@ -18,7 +18,7 @@
                 <img src="../img/menuHamburguesa.png" alt="menuHamburguesa">
             </div>
             <nav class="header__nav" >
-                <ul class="nav__list">
+                <ul class="nav__list" id="nav__list">
                     <li class="nav__list-item">
                         <a class="nav__list-link" href="../index.html">INICIO</a>
                     </li>
