--- a/pages/comoAyudar.html
+++ b/pages/comoAyudar.html
@@ -1,55 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Conocenos</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="icon" type="image/png" href="../img/YORIO SIN FONDO BLANCO.png" />
-    <link rel="stylesheet" href="../css/main.css" />
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-</head>
-<body>
-    <header class="divHeader" data-aos="fade-up"
-    data-aos-duration="3000">
-            <img class="logoPNG" src="../img/YORIO SIN FONDO BLANCO.png" alt="Logo Yorio">
-            <div id="toggle-menu" class="toggle-menu">
-                <img src="../img/menuHamburguesa.png" alt="menuHamburguesa">
+<html lang="es">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Conocenos</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+        <link rel="icon" type="image/png" href="../img/YORIO SIN FONDO BLANCO.png" />
+        <link rel="stylesheet" href="../css/main.css" />
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    </head>
+
+    <body>
+        <header class="divHeader" data-aos="fade-up"
+        data-aos-duration="3000">
+                <img class="logoPNG" src="../img/YORIO SIN FONDO BLANCO.png" alt="Logo Yorio">
+                <div id="toggle-menu" class="toggle-menu">
+                    <img src="../img/menuHamburguesa.png" alt="menuHamburguesa">
+                </div>
+                <nav class="listaNav" >
+                    <a class="nav" href="/index.html">INICIO</a>
+                    <a class="nav" href="/pages/conocenos.html">CONOCENOS</a>
+                    <a class="nav" href="/pages/campanias.html">CAMPAÑAS</a>
+                    <!-- <a class="nav" href="./pages/comoAyudar.html">CÓMO AYUDAR</a> -->
+                    <a class="nav" href="./pages/contacto.html">CONTACTO</a>
+
+                </nav>
+                <button type="button" id="button" class="btn btn-success">AYUDANOS</button>
+                <!-- que el boton me redireccione a la pagina de mercado pago con los distintos montos a donar -->
             </div>
-            <nav class="listaNav" >
-                <a class="nav" href="/index.html">INICIO</a>
-                <a class="nav" href="/pages/conocenos.html">CONOCENOS</a>
-                <a class="nav" href="/pages/campanias.html">CAMPAÑAS</a>
-                <!-- <a class="nav" href="./pages/comoAyudar.html">CÓMO AYUDAR</a> -->
-                <a class="nav" href="./pages/contacto.html">CONTACTO</a>
+        </header>
 
-             </nav>
-             <button type="button" id="button" class="btn btn-success">AYUDANOS</button>
-             <!-- que el boton me redireccione a la pagina de mercado pago con los distintos montos a donar -->
-        </div>
-    </header>
+        <main class="main">
+            <div class="container1" id="contentComoAyudar">
+                <h1 class="textoHeaderInicio" data-aos="fade-up"
+                data-aos-duration="3000" >Cómo ayudarnos.</h1>
+            </div>
 
-    <main class="main">
-        <div class="container1" id="contentComoAyudar">
-            <h1 class="textoHeaderInicio" data-aos="fade-up"
-            data-aos-duration="3000" >Cómo ayudarnos.</h1>
-        </div>
+        </main>
 
-    </main>
+        <footer>
 
-    <footer>
+        </footer>
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <script>   
+            AOS.init(); 
+        </script>
+        
+        <script src="../menu.js"></script>
 
-    </footer>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>   
-        AOS.init(); 
-     </script>
-     
-    <script src="../menu.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
-
-</body>
+    </body>
 </html>
