--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -12,8 +12,7 @@
     </head>
 
     <body>
-        <header class="header" data-aos="fade-up"
-        data-aos-duration="3000">
+        <header class="header" >
                 <img class="header__logo" src="../img/YORIO SIN FONDO BLANCO copia.png" alt="Logo Yorio">
                 <div id="toggle-menu" class="toggle-menu">
                     <img src="../img/menuHamburguesa.png" alt="menuHamburguesa">
@@ -36,22 +35,122 @@
                 </nav>
 
                 
-                <button type="button" id="header__button" class="btn btn-success">AYUDANOS</button>
+                <button type="button" id="header__button" class="btn btn-success"><a href="./comoAyudar.html">AYUDANOS</a></button>
                 <!-- que el boton me redireccione a la pagina de mercado pago con los distintos montos a donar -->
             </div>
         </header>
 
         <main class="main">
-            <div class="container1" id="contentContacto">
-                <h1 class="container1__texto" data-aos="fade-up"
-                data-aos-duration="3000" >Contacto.</h1>
+        <div class="container1" id="contentContacto">
+            <h1 class="container1__texto" data-aos="fade-up" data-aos-duration="3000">Contacto.</h1>
+        </div>
+
+        <div class="contacto__seccion m-5 p-5">
+            <div class="p-5">
+                <h3>
+                    CONTACTATE CON NOSOTROS
+                </h3>
+                <p>Debajo tendrás toda nuestra información de contacto para que puedas comunicarte con nosotros, dejanos
+                    un correo o escribinos mediante WhatsApp o redes sociales.</p>
+                <ul class="seccion__info">
+                    <li>
+                        WhatsApp: 1161073489
+                    </li>
+
+                    <li>
+
+                        Correo: echecristian12@gmail.com
+                    </li>
+                    <li>
+                        Redes sociales:
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://www.instagram.com/yoriotigre/">yoriotigre</a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://www.instagram.com/yorioar/">yorioar</a>
+                    </li>
+                </ul>
+                <p>El boca en boca hace que todo se vea y que más gente linda se sume, se sabe que existen muchos héroes
+                    verdes
+                    solo que no saben dónde y como participar, compartiendo y dando a conocer estos detalles hace que
+                    todo fluya
+                    para el bien de este maravilloso planeta. Tu casa, mí casa, la casa de todos.</p>
+                <h3>
+                    DONACIONES
+                </h3>
+                <p>Debajo tendrás acceso a los links para donar montos determinados, para donar un monto específico
+                    deseado hace <a href="">click acá</a></p>
+
+                <div class="seccion__buttonlist m-5" data-aos="fade-up" data-aos-duration="1500">
+                    <a class="donatebutton" href="https://mpago.la/1kE3fir" target="_blank">$100</a>
+                    <a class="donatebutton" href="https://mpago.la/2M2xW86
+                    " target="_blank">$200</a>
+                    <a class="donatebutton" href="https://mpago.la/31yvedL" target="_blank">$300</a>
+                    <a class="donatebutton" href="https://mpago.la/28HLQwn" target="_blank">$400</a>
+                </div>
+            </div>
+        </div>
+
+    </main>
+
+    <!-- Footer -->
+    <div class="  col-sm-12">
+        <footer class="footer__main text-center text-lg-start text-dark" style="background-color: #ECEFF1">
+            <div>
+                <a href="" class="text-white me-4">
+                    <i class="fa-brands fa-facebook"></i>
+                </a>
+                <a href="" class="text-white me-4">
+                    <i class="fab fa-twitter"></i>
+                </a>
+                <a href="" class="text-white me-4">
+                    <i class="fab fa-google"></i>
+                </a>
+                <a href="" class="text-white me-4">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a href="" class="text-white me-4">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+                <a href="" class="text-white me-4">
+                    <i class="fab fa-github"></i>
+                </a>
+            </div>
+            </section>
+
+            <section class="">
+                <div class="container text-center text-md-start mt-5">
+                    <div class="row mt-3">
+                        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+                            <h6 class="text-uppercase fw-bold">YoRio</h6>
+                            <hr class="mb-4 mt-0 d-inline-block mx-auto"
+                                style="width: 60px; background-color: #2ecc71; height: 2px" />
+                            <p>
+                                Somos una Organización no gubernamental (ONG) que se dedica a la regeneración de ríos,
+                                mares y costas mediante grupos de colección de residuos.
+                            </p>
+                        </div>
+                        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                            <h6 class="text-uppercase fw-bold">Contacto</h6>
+                            <hr class="mb-4 mt-0 d-inline-block mx-auto"
+                                style="width: 60px; background-color: #2ecc71; height: 2px" />
+                            <p>Argentina, Buenos Aires</p>
+                            <p>Instagram: yorioar</p>
+                            <p>WhatsApp: 1567594108</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <div class="footer__copyr text-center p-3">
+                © 2022 Copyright: YoRio AR
             </div>
 
-        </main>
-
-        <footer>
-
         </footer>
+
+        <!-- Termina el footer -->
+    </div>
 
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
         <script>   
