agregue cvu, mejore imagenes de campañas

--- a/pages/campanias.html
+++ b/pages/campanias.html
@@ -53,16 +53,15 @@
 
         <div class="campanias__descripcion1 p-5" data-aos="fade-right" data-aos-duration="1500">
             <div>
-                <h3 class="p-5">NUESTRAS CAMPAÑAS</h3>
-                <p class="p-5">El trabajo más común es el de caminar con bolsas de residuos, guantes, rastrillos, palas, ganchos
+                <h3>NUESTRAS CAMPAÑAS</h3>
+                <p>El trabajo más común es el de caminar con bolsas de residuos, guantes, rastrillos, palas, ganchos
                     y pinches sacando en modo de rastrillaje humano todo lo que el agua trae de los acuaductos no controlados
                     de la ciudades y lo que la gente deja tirado. Al finalizar dejamos las bolsas en lugares correspondientes
                     dónde delegaciones municipales pasan con camiones y llevan todo lo juntado a lugares que serán tratados.</p>
-                    <p class="p-5">
-                        En segundo lugar hacemos otro trabajo donde se lleva a cabo con botes.
-Es un trabajo fluvial, sacando todo tipo de plásticos, bolsas y demás
-desechos que vienen de salidas de arroyos que no tienen control, ni cuidado
-y desemboca en ríos que llegan al delta,dejando así un tendal de desechos que podrían ser reciclados.
+                    <p>En segundo lugar hacemos otro trabajo donde se lleva a cabo con botes.
+                    Es un trabajo fluvial, sacando todo tipo de plásticos, bolsas y demás
+                    desechos que vienen de salidas de arroyos que no tienen control, ni cuidado
+                    y desemboca en ríos que llegan al delta,dejando así un tendal de desechos que podrían ser reciclados.
 
                     </p>
             </div>
@@ -186,14 +185,14 @@ y desemboca en ríos que llegan al delta,dejando así un tendal de desechos que 
             <img class="img-fluid rounded conocenos__img" src="../img/camp8.jpeg" alt="" data-aos="fade-left"
                 data-aos-duration="1500">
             <div>
-                <h3 class="p-5">MÁS DE NOSOTROS</h3>
-                <p class="p-5">Al terminar de hacer la jornada fluvial con nuestros cuidados correspondientes, chalecos salvavidas, guantes, y botas, que son
+                <h3 >MÁS DE NOSOTROS</h3>
+                <p >Al terminar de hacer la jornada fluvial con nuestros cuidados correspondientes, chalecos salvavidas, guantes, y botas, que son
                     donados gracias a los mismos voluntarios, podemos cumplir con las acciones y dejar un plano totalmente satisfactorio para la
                     comunidad y la gente, que al participar se lleva de un momento trágico a un momento renovado limpio y puro donde se genera una
                     energía única. Vivirlo y participar deja una sensación indescriptible.
                 </p>
                     
-                    <p class="p-5">
+                    <p >
 
                         Hacemos plantaciónes de árboles autóctonos. Convocando niños y grandes, explicando lo importante que es plantar y conservar un espacio
                         verde, para qué y que función cumple en nuestro ambiente, trabajando en conjunto con la tierra y dando a conocer cada especie y que función tienen las mismas.
@@ -201,12 +200,6 @@ y desemboca en ríos que llegan al delta,dejando así un tendal de desechos que 
                     </p>
             </div>
         </div>
-
-
-
-
-
-
     </main>
 
     <!-- Footer -->
