--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -45,8 +45,8 @@
             <h1 class="container1__texto" data-aos="fade-up" data-aos-duration="3000">Contacto.</h1>
         </div>
 
-        <div class="contacto__seccion m-5 p-5">
-            <div class="p-5">
+        <div class="contacto__seccion">
+            <div class="p-3">
                 <h3>
                     CONTACTATE CON NOSOTROS
                 </h3>
@@ -79,16 +79,22 @@
                 <h3>
                     DONACIONES
                 </h3>
-                <p>Debajo tendrás acceso a los links para donar montos determinados, para donar un monto específico
-                    deseado hace <a href="">click acá</a></p>
+                <!-- <p>Debajo tendrás acceso a los links para donar montos determinados, para donar un monto específico
+                    deseado hace <a href="">click acá</a></p> -->
 
-                <div class="seccion__buttonlist m-5" data-aos="fade-up" data-aos-duration="1500">
+                <div class="seccion__buttonlist m-3" data-aos="fade-up" data-aos-duration="1500">
                     <a class="donatebutton" href="https://mpago.la/1kE3fir" target="_blank">$100</a>
                     <a class="donatebutton" href="https://mpago.la/2M2xW86
                     " target="_blank">$200</a>
                     <a class="donatebutton" href="https://mpago.la/31yvedL" target="_blank">$300</a>
                     <a class="donatebutton" href="https://mpago.la/28HLQwn" target="_blank">$400</a>
                 </div>
+
+                <p>Para donar otro monto, podes enviarnos dinero por Mercado Pago:</p>
+                <p>Nombre: Cristian Carlos Echagaray</p>
+                <p>CVU: 0000003100042319747230</p>
+                <p>Alias: rioymasrio</p>
+                <p>CUIT/CUIL: 20-34223721-6</p>
             </div>
         </div>
 
