pagina ayudanos lista

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -90,7 +90,7 @@
                     <a class="donatebutton" href="https://mpago.la/28HLQwn" target="_blank">$400</a>
                 </div>
 
-                <p>Para donar otro monto, podes enviarnos dinero por Mercado Pago:</p>
+                <p>Para donar otro monto, podes enviarnos dinero por transferencia bancaria o Mercado Pago:</p>
                 <p>Nombre: Cristian Carlos Echagaray</p>
                 <p>CVU: 0000003100042319747230</p>
                 <p>Alias: rioymasrio</p>
