--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
                             <a class="nav__list-link" href="/index.html">INICIO</a>
                         </li>
                         <li class="nav__list-item">
-                            <a class="nav__list-link" href="/pages/conocenos.html">CONOCENOS</a>
+                            <a class="nav__list-link" href="./pages/conocenos.html">CONOCENOS</a>
                         </li>
                         <li class="nav__list-item">
-                            <a class="nav__list-link" href="/pages/campanias.html">CAMPAÑAS</a>
+                            <a class="nav__list-link" href="./pages/campanias.html">CAMPAÑAS</a>
                         </li>
                         <li class="nav__list-item">
-                            <a class="nav__list-link" href="/pages/contacto.html">CONTACTO</a>
+                            <a class="nav__list-link" href="./pages/contacto.html">CONTACTO</a>
                         </li>
                     </ul>
                 </nav>
